--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,12 +15,12 @@ build:
 sphinx:
   configuration: conf.py
 
+# Optionally build your docs in additional formats such as PDF and ePub
+formats:
+  - pdf
+
 # We recommend specifying your dependencies to enable reproducible builds:
 # https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
   - requirements: requirements.txt
-
-# Build PDF & ePub
-formats:
-  - pdf
